Finished the user AUTH

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -14,7 +14,7 @@
 }
 
 @import "../components//styles/Navbar";
+@import "../components/styles/Form";
 @import "../pages/styles/Home";
-@import "../pages/styles/Login";
-@import "../pages/styles/Signup";
+@import "../pages/styles/Login-Signup-form";
 
