--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -50,4 +50,107 @@
   flex-direction: row;
   justify-content: space-around;
   color: white;
+}
+
+#Form {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+#Form .input-container {
+  width: 500px;
+  margin: 20px;
+}
+#Form .input-container input {
+  width: 100%;
+  height: 45px;
+  padding-left: 5px;
+  font-size: 21px;
+}
+#Form .button-container {
+  margin: 20px;
+  width: auto;
+}
+#Form .button-container button {
+  width: 120px;
+  height: 45px;
+  background: none;
+  border: blue 2px solid;
+  font-size: 21px;
+}
+#Form .button-container button:hover {
+  background: blue;
+  color: white;
+}
+
+#Login-Signup-form {
+  width: 100%;
+  min-height: 725px;
+  max-height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#Login-Signup-form .form-container {
+  padding: 20px;
+  width: 350px;
+  height: 400px;
+  box-shadow: 1px 1px 10px 1px grey;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+#Login-Signup-form .form-container .title-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#Login-Signup-form .form-container .input-container {
+  width: 100%;
+}
+#Login-Signup-form .form-container .input-container input {
+  width: 300px;
+  font-size: 21px;
+  padding-left: 5px;
+  border-radius: 5px;
+  border: black 1px solid;
+}
+#Login-Signup-form .form-container .input-container .email-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  margin: 25px 0 25px;
+}
+#Login-Signup-form .form-container .input-container .password-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  margin: 25px 0 25px;
+}
+#Login-Signup-form .form-container .button-container {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#Login-Signup-form .form-container .button-container button {
+  width: 300px;
+  font-size: 21px;
+  background: blue;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
 }/*# sourceMappingURL=styles.css.map */
