--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -15,6 +15,7 @@
 
 @import "../components//styles/Navbar";
 @import "../components/styles/Form";
+@import "../components/styles/TodoElement";
 @import "../pages/styles/Home";
 @import "../pages/styles/Login-Signup-form";
 
