--- a/client/src/pages/styles/_Login-Signup-form.scss
+++ b/client/src/pages/styles/_Login-Signup-form.scss
@@ -2,6 +2,9 @@
     width: 100%;
     min-height: 725px;
     max-height: auto;
+    background: rgb(0, 0, 0, 0.1);
+
+
 
     @include flex();
 
@@ -13,6 +16,10 @@
         border-radius: 15px;
         @include flex();
         flex-direction: column;
+        background: white;
+
+
+        
 
         .title-container {
             width: 100%;
@@ -60,6 +67,23 @@
                 border-radius: 5px;
                 padding: 5px;
                 
+            }
+        }
+
+        .error-container {
+
+            width: auto;
+            height: auto;
+            background: rgba(255,0,0,0.2);
+            border: 1px red solid;
+            border-radius: 5px;
+            padding: 15px;
+            margin: 5px;
+
+            h4 {
+                font-size: 21px;
+                color: red;
+                text-align: center;
             }
         }
 
