--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -137,6 +137,7 @@
   width: 100%;
   min-height: 725px;
   max-height: auto;
+  background: rgba(0, 0, 0, 0.1);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -151,6 +152,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  background: white;
 }
 #Login-Signup-form .form-container .title-container {
   width: 100%;
@@ -199,4 +201,18 @@
   border: none;
   border-radius: 5px;
   padding: 5px;
+}
+#Login-Signup-form .form-container .error-container {
+  width: auto;
+  height: auto;
+  background: rgba(255, 0, 0, 0.2);
+  border: 1px red solid;
+  border-radius: 5px;
+  padding: 15px;
+  margin: 5px;
+}
+#Login-Signup-form .form-container .error-container h4 {
+  font-size: 21px;
+  color: red;
+  text-align: center;
 }/*# sourceMappingURL=styles.css.map */
