--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -10,7 +10,8 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: "Poppins"
+    font-family: "Poppins";
+
 }
 
 @import "../components//styles/Navbar";
